test/type-error-3.ktn
// TODO(strager): Improve error location reporting.

define baq ([char] [char] -> char):
  ->q; q 0 kitten::intrinsic::get kitten::intrinsic::fromSome
  ->x y; x
